--- a/birdscan-frontend/src/translations/en/main.json
+++ b/birdscan-frontend/src/translations/en/main.json
@@ -1,5 +1,6 @@
 {
     "header":{
+        "setLanguage": "Select Language",
         "home": "Home",
         "explore": "Explore",
         "tours": "Tours",
