--- a/birdscan-frontend/src/translations/es/main.json
+++ b/birdscan-frontend/src/translations/es/main.json
@@ -1,5 +1,6 @@
 {
     "header":{
+        "setLanguage": "Seleccionar Idioma",
         "home": "Inicio",
         "explore": "Explorar",
         "tours": "Tours",
