--- a/birdscan-frontend/src/translations/en/main.json
+++ b/birdscan-frontend/src/translations/en/main.json
@@ -88,5 +88,23 @@
         "google_button": "Sign in with Google",
         "account": "Don't have an account yet?",
         "account_create": "Create account"
+    },
+
+    "signupSection":{
+        "h1_signupsection": "Create your account and learn about the birds of Nicaragua",
+        "firstname_placeholder": "First name",
+        "lastname_placeholder": "Last name",
+        "username_placeholder": "Username",
+        "confirmpassword_placeholder": "Confirm Password",
+        "button_signup": "Create an account",
+        "account": "Already have an account?",
+        "login": "Log in",
+        "terms_of_service": "I accept the terms and conditions",
+        "type_of_user": "Type of user:",
+        "tourist": "Tourist",
+        "tour_guide": "Tour guide"
     }
+
+
+
 }
