Implementación de estado a la barra para mostrar botónes de inicio de sesión si aún no se ha hecho y ppara mostrar opciones para usuario si ya se hizo el login

--- a/birdscan-frontend/src/translations/ch/main.json
+++ b/birdscan-frontend/src/translations/ch/main.json
@@ -7,6 +7,7 @@
         "events": "活动",
         "learn": "学习",
         "login": "登录",
+        "signup": "注册",
         "h1_header" : "通过鸟类探索尼加拉瓜",
         "h2_header_hero": "规划行程、识别物种，支持自然保护区的责任旅游。",
         "primary_button_hero": "查看鸟类目录",
