--- a/birdscan-frontend/src/translations/en/main.json
+++ b/birdscan-frontend/src/translations/en/main.json
@@ -7,6 +7,7 @@
         "events": "Events",
         "learn": "Learn",
         "login": "Log In",
+        "signup": "Sign Up",
         "h1_header" : "Discover Nicaragua through its birds",
         "h2_header_hero": "Plan your trips, identify species, and support responsible tourism in our nature reserves.",
         "primary_button_hero": "View bird catalog",
