--- a/birdscan-frontend/src/translations/es/main.json
+++ b/birdscan-frontend/src/translations/es/main.json
@@ -7,6 +7,7 @@
         "events": "Eventos",
         "learn": "Aprende",
         "login": "Iniciar Sesión",
+        "signup": "Registrate",
         "h1_header": "Descubre Nicaragua a través de sus aves",
         "h2_header_hero": "Planea tus recorridos, identifica especies y apoya el turismo responsable en nuestras reservas naturales",
         "primary_button_hero": "Ver catálogo de aves",
