Configuración de funciones del backend para obtener información de las especies de aves

--- a/birdscan-frontend/src/translations/ch/main.json
+++ b/birdscan-frontend/src/translations/ch/main.json
@@ -14,6 +14,12 @@
         "secondary_button_hero": "规划我的行程"
     },
 
+    "userDropDown": {
+        "details": "查看信息",
+        "edit": "编辑",
+        "signout": "注销"
+    },
+
     "main": {
         "h2_main": "我们在尼加拉瓜连接自然、旅游与保护",
         "h3_main": "BirdScan是一个旨在促进尼加拉瓜保护区观鸟旅游的数字平台。您可在此获取关于留鸟与候鸟的信息、自然保护区详情、保护活动资讯，并能联系到认证的当地向导。",
