Finalización de funcionalidad para el catálogo de aves

--- a/birdscan-frontend/src/translations/en/main.json
+++ b/birdscan-frontend/src/translations/en/main.json
@@ -78,6 +78,7 @@
         "species_h2-title": "Explore species",
         "species_p": "Discover a wide variety of birds in their natural environment, learn how to identify them, and discover fascinating facts about each species. With each observation, you will expand your knowledge and your connection with nature",
         "seallS_link": "See all",
+        "seEndangered_link": "See endangered species",
         "input_placeholder-species": "Enter the scientific or common name of the species",
         "reserves_h2-tittle": "Explore nature reserves",
         "reserves_p": "Immerse yourself in reserves full of biodiversity and unique landscapes. Explore their ecosystems, learn about their importance for conservation, and experience connecting with the natural wealth of each place",
