Finalización de las funcionalidades del módulo de catálogo de aves, se incluyó la busqueda por nombre, y el filtro por estatus de cada ave (Migratoria o Residente)

--- a/birdscan-frontend/src/translations/en/main.json
+++ b/birdscan-frontend/src/translations/en/main.json
@@ -48,7 +48,7 @@
     "mapsSection": {
         "h2_mapsSection": "Locate nature reserves, trails, and key observation points.",
         "p_mapsSection": "Explore detailed maps of nature reserves, locating trails, viewing points, and available services. Plan your trip in advance to make the most of your birdwatching experience.",
-        "primary_button_mapsSection": "Explore maps"
+        "primary_button_mapsSection": "Explore Nature Reserves"
     },
 
     "ctaSection": {
