--- a/birdscan-frontend/src/translations/es/main.json
+++ b/birdscan-frontend/src/translations/es/main.json
@@ -48,7 +48,7 @@
     "mapsSection": {
         "h2_mapsSection": "Ubica reservas naturales, senderos y puntos claves de observación",
         "p_mapsSection": "Explora mapas detallados de las reservas naturales, ubicando senderos, puntos de avistamiento y servicios disponibles. Planifica tu recorrido con anticipación para aprovechar al máximo tu experiencia de aviturismo.",
-        "primary_button_mapsSection": "Explorar mapas"
+        "primary_button_mapsSection": "Explorar Reservas Naturales"
     },
 
     "ctaSection": {
