--- a/birdscan-frontend/src/translations/ch/main.json
+++ b/birdscan-frontend/src/translations/ch/main.json
@@ -48,7 +48,7 @@
     "mapsSection": {
         "h2_mapsSection": "定位自然保护区、步道和关键观景点",
         "p_mapsSection": "探索自然保护区的详细地图，定位步道、观鸟点及可用服务设施。提前规划行程，充分享受观鸟之旅",
-        "primary_button_mapsSection": "探索地图"
+        "primary_button_mapsSection": "探索自然保护区"
     },
 
     "ctaSection": {
