Finalización del catáglogo de reservas naturales y complementación con sección de detalles de reservas naturales

--- a/birdscan-frontend/src/translations/ch/main.json
+++ b/birdscan-frontend/src/translations/ch/main.json
@@ -11,7 +11,8 @@
         "h1_header" : "通过鸟类探索尼加拉瓜",
         "h2_header_hero": "规划行程、识别物种，支持自然保护区的责任旅游。",
         "primary_button_hero": "查看鸟类目录",
-        "secondary_button_hero": "规划我的行程"
+        "secondary_button_hero": "规划我的行程",
+        "learn_use_BS": "学习如何使用BirdScan"
     },
 
     "userDropDown": {
