--- a/birdscan-frontend/src/translations/rs/main.json
+++ b/birdscan-frontend/src/translations/rs/main.json
@@ -11,7 +11,8 @@
         "h1_header": "Откройте для себя Никарагуа через его птиц",
         "h2_header_hero": "Планируйте свои маршруты, определяйте виды и поддерживайте ответственный туризм в наших природных заповедниках",
         "primary_button_hero": "Просмотреть каталог птиц",
-        "secondary_button_hero": "Планировать визит"
+        "secondary_button_hero": "Планировать визит",
+        "learn_use_BS": "Научитесь пользоваться BirdScan"
     },
     "userDropDown": {
         "details": "Посмотреть информацию",
