--- a/birdscan-frontend/src/translations/es/main.json
+++ b/birdscan-frontend/src/translations/es/main.json
@@ -11,7 +11,8 @@
         "h1_header": "Descubre Nicaragua a través de sus aves",
         "h2_header_hero": "Planea tus recorridos, identifica especies y apoya el turismo responsable en nuestras reservas naturales",
         "primary_button_hero": "Ver catálogo de aves",
-        "secondary_button_hero": "Planear mi visita"
+        "secondary_button_hero": "Planear mi visita",
+        "learn_use_BS": "Aprende a usar BirdScan"
     },
 
     "userDropDown": {
